argocd/scroll.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: argocd
  name: argocd-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "argocd.popush.cloud"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "argocd.popush.cloud"
    tls:
      mode: SIMPLE
      credentialName: argocd-popush-cloud-tls
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: argocd
  name: argocd-vs
spec:
  hosts:
  - "argocd.popush.cloud"
  gateways:
  - argocd-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: helm-argocd-release-server
        port:
          number: 80
